--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.5.9
-      # - name: Rubocop
-      #   run: |
-      #     bundle exec rubocop
-      - name: Build and run tests
+      - name: Build and run checks/tests
         env:
           DATABASE_URL: postgres://postgres:@localhost:5432/test
           RAILS_ENV: test
@@ -32,5 +29,9 @@ jobs:
           sudo apt-get -yqq install libpq-dev
           gem install bundler
           bundle install --jobs 4 --retry 3
-          bundle exec rails db:prepare
+          bundle exec rake db:migrate       
+          bundle exec rubocop
+          bundle exec rails_best_practices .
+          bundle exec bundle-audit check --update
+          bundle exec brakeman
           bundle exec rspec
