--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,14 @@
 name: CI
 on: [push, pull_request]
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     services:
       db:
         image: postgres:10
         ports: ['5432:5432']
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          password: secretpassword
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -23,16 +22,13 @@ jobs:
           ruby-version: 2.5.9
       - name: Build and run checks/tests
         env:
-          DATABASE_URL: postgres://postgres:@localhost:5432/ci_test
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          DATABASE_URL: postgres://postgres:secretpassword@localhost:5432/test
           RAILS_ENV: test
           RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
         run: |
           sudo apt-get -yqq install libpq-dev
           gem install bundler
-          bundle install --jobs 4 --retry 3     
-          cp config/database.yml.github-actions config/database.yml
+          bundle install --jobs 4 --retry 3
           bundle exec rake db:migrate
           bundle exec rubocop
           bundle exec rails_best_practices .
