--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     services:
       db:
-        image: postgres:10
-        ports: ['5432:5432']
+        image: postgres
         env:
           password: secretpassword
+        ports: ['5432:5432']
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
