--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,6 @@ on: [push, pull_request]
 jobs:
   rspec:
    runs-on: ubuntu-latest
-    container:
-      image: ruby:2.5.9
-
     services:
       postgres:
         image: postgres:10.3
@@ -20,6 +17,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Setup Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 2.5.9
 
     - name: Gem cache
       id: cache-bundle
