--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install dependencies
         run: |
           gem install bundler
-          bundler install
+          bundle install --jobs 4 --retry 3
       - name: Create database
         run: |
           bundler exec rails db:create RAILS_ENV=test
