--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
-          gem install bundler
+          gem install bundler:1.17.3
           bundle install --jobs 4 --retry 3
       - name: Create database
         run: |
