--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ env:
   RUBY_VERSION: 2.5.9
   POSTGRES_USER: postgres
   POSTGRES_PASSWORD: postgres
-  POSTGRES_DB: postgres
+  POSTGRES_DB: ci_test
 
 name: Rails tests
 on: [push,pull_request]
@@ -45,8 +45,11 @@ jobs:
           gem install bundler:1.17.3
           bundle install --jobs 4 --retry 3
       - name: Create database
+        env:
+          RAILS_ENV: test
         run: |
-          bundler exec rails db:create RAILS_ENV=test
-          bundler exec rails db:migrate RAILS_ENV=test
+          cp config/database.yml.travis config/database.yml
+          bundle exec rails db:create
+          bundle exec rails db:migrate
       - name: Run tests
         run: bundle exec rspec
