--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
-          cp config/database.yml.travis config/database.yml
+          cp ./config/database.yml.travis ./config/database.yml
           bundle exec rails db:create
           bundle exec rails db:migrate
       
