--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,16 +56,14 @@ jobs:
         env:
           RAILS_ENV: test
         run: |
-          gem install bundler:1.17.3
+          gem install bundler
           bundle install --jobs 4 --retry 3 --path vendor/bundle
 
       - name: Create database
         env:
           RAILS_ENV: test
         run: |
-          cp ./config/database.yml.travis ./config/database.yml
-          bundle exec rails db:create
-          bundle exec rails db:migrate
+          bin/rails db:create db:schema:load
       
       - name: Run tests
         run: bundle exec rspec
