--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
 
   rspec:
     name: RSpec
-    needs: rubocop-test
+    needs: rubocop
     runs-on: ubuntu-latest
     services:
       postgres:
