--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,18 +62,11 @@ jobs:
       - name: Setup database
         env:
           RAILS_ENV: test
-          PG_HOST: localhost
-          PG_USER: ${{ env.PG_USER }}
-          PG_PASSWORD: ${{ env.PG_PASSWORD }}
         run: |
-          pwd
-          ls -la
+          cp config/database.yml.github-actions config/database.yml
           bin/rails db:create db:schema:load
 
       - name: Run tests
         env:
           RAILS_ENV: test
-          PG_HOST: localhost
-          PG_USER: ${{ env.PG_USER }}
-          PG_PASSWORD: ${{ env.PG_PASSWORD }}
         run: bundle exec rspec
