--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,18 +16,24 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
-      - name: Install related Gems
+      - name: Gem cache
+        id: cache-bundle
+        uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: bundle-${{ hashFiles('**/Gemfile.lock') }}
+      - name: Install dependencies
+        env:
+          RAILS_ENV: test
         run: |
-          gem install rubocop
-          gem install rails_best_practices
-          gem install bundle-audit
-          gem install brakeman
+          gem install bundler:1.17.3
+          bundle install --jobs 4 --retry 3 --path vendor/bundle
       - name: Run checks
         run: | 
-          rubocop
-          rails_best_practices .
-          bundle-audit check --update
-          brakeman
+          bundle exec rubocop
+          bundle exec rails_best_practices .
+          bundle exec bundle-audit check --update
+          bundle exec brakeman
 
   rspec:
     name: RSpec
