--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,12 +59,12 @@ jobs:
       - name: Install postgres client
         run: sudo apt-get install libpq-dev
       
-      # - name: Gem cache
-      #   id: cache-bundle
-      #   uses: actions/cache@v1
-      #   with:
-      #     path: vendor/bundle
-      #     key: bundle-${{ hashFiles('**/Gemfile.lock') }}
+      - name: Gem cache
+        id: cache-bundle
+        uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: bundle-${{ hashFiles('**/Gemfile.lock') }}
       
       - name: Install dependencies
         run: |
