Update Ruby version & configuration

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-SECRET_KEY_BASE=
+#######################################
+# Postgres credentials
+#######################################
+POSTGRES_USERNAME=
 POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
