--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 
 services:
-  postgres:
-    build:
-      context: .
-      dockerfile: docker/containers/postgres/Dockerfile
+  db:
+    image: postgres
     volumes:
-      - ./:/home/root/project
+      - ./tmp/db:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: password
 
   web:
     build:
@@ -16,9 +16,8 @@ services:
       - ./:/home/deploy/od-ot
       - gems:/usr/local/bundle
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
-    links:
-      - postgres
-    env_file: .env
+    depends_on:
+      - db
 
 volumes:
   gems:
