--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,56 @@
 env:
   RUBY_VERSION: 2.7.5
-  PG_USER: postgres
-  PG_PASSWORD: postgres
+  BUNDLER_VERSION: 1.17.3
+  RAILS_ENV: ci
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: postgres
 
 name: CI
 
 on: [push, pull_request]
 
 jobs:
-  check_code:
-    name: Check code
+  setup:
+    name: Bundle & cache
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
-
-      - name: Gems cache
+      - uses: actions/cache@v2
         id: cache-bundle
-        uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: bundle-${{ hashFiles('**/Gemfile.lock') }}
+      - run: |
+          gem install bundler:${{ env.BUNDLER_VERSION }}
+          bundle install --jobs 4 --retry 3 --path vendor/bundle
+
+  lint:
+    name: Lint
+    needs: setup
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+      - uses: actions/cache@v2
+        id: cache-bundle
         with:
           path: vendor/bundle
           key: bundle-${{ hashFiles('**/Gemfile.lock') }}
 
-      - name: Install dependencies
+      - name: Install Bundler & Gems
         run: |
           gem install bundler:1.17.3
           bundle install --jobs 4 --retry 3 --path vendor/bundle
 
-      - name: Run checks
-        run: | 
+      - name: Run linters
+        run: |
           bundle exec rubocop
           bundle exec rails_best_practices .
           bundle exec bundle-audit check --update
@@ -38,16 +58,16 @@ jobs:
 
   rspec:
     name: RSpec
-    needs: check_code
+    needs: setup
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres:10.3
+        image: postgres:11
         ports:
-        - 5432:5432
+          - 5432:5432
         env:
-          PG_USER: ${{ env.PG_USER}}
-          PG_PASSWORD: ${{ env.PG_PASSWORD }}
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
@@ -55,28 +75,33 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
-
-      - name: Install postgres client
-        run: sudo apt-get install libpq-dev
-      
-      - name: Gem cache
+      - uses: actions/cache@v2
         id: cache-bundle
-        uses: actions/cache@v1
         with:
           path: vendor/bundle
           key: bundle-${{ hashFiles('**/Gemfile.lock') }}
-      
-      - name: Install dependencies
+
+      - name: Install postgres client
+        run: sudo apt-get install libpq-dev
+
+      - name: Install Bundler & Gems
         run: |
           gem install bundler:1.17.3
           bundle install --jobs 4 --retry 3 --path vendor/bundle
 
-      - name: Setup database
+      - name: Setup DB
         env:
-          RAILS_ENV: test
+          RAILS_ENV: ${{ env.RAILS_ENV }}
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
         run: |
           cp config/database.yml.github-actions config/database.yml
-          bin/rails db:create db:schema:load
+          bundle exec rake db:create
+          bundle exec rake db:schema:load
 
-      - name: Run tests
-        run: bundle exec rspec
+      - name: Run RSpec
+        env:
+          RAILS_ENV: ${{ env.RAILS_ENV }}
+          POSTGRES_USER: ${{ env.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+        run: COVERAGE=true bundle exec rspec --require rails_helper
