--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 #######################################
 # Postgres credentials
 #######################################
-POSTGRES_USERNAME=
-POSTGRES_PASSWORD=
-POSTGRES_HOST=
-POSTGRES_PORT=
+
+#POSTGRES_USERNAME=
+#POSTGRES_PASSWORD=
+#POSTGRES_HOST=
+#POSTGRES_PORT=
