Update Ruby version, Fix CI

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,7 @@ AllCops:
   NewCops: disable
   DisplayCopNames: true
   StyleGuideCopsOnly: false
-  TargetRubyVersion: 2.5 # Code Climate supports only v2.5 max now
+  TargetRubyVersion: 2.6 # Code Climate supports only v2.6 max now - https://docs.codeclimate.com/docs/rubocop
   Exclude:
     - db/**/*
     - script/**/*
