--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,7 +4,9 @@ AllCops:
   NewCops: disable
   DisplayCopNames: true
   StyleGuideCopsOnly: false
-  TargetRubyVersion: 2.6 # Code Climate supports only v2.6 max now - https://docs.codeclimate.com/docs/rubocop
+  # HACK Code Climate supports only v2.6 max now - https://docs.codeclimate.com/docs/rubocop
+  # But only 2.5 is working
+  TargetRubyVersion: 2.5
   Exclude:
     - db/**/*
     - script/**/*
